--- a/styles.css
+++ b/styles.css
@@ -31,4 +31,10 @@ p{
 img{
     width: 100%;
 }
+.showcase{
+width: 100%;
+height: 93vh;
+position: relative;
+background: url(images/Netflix\ Bg.jpg) no-repeat center center/cover;
+}
 
